--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
-<resources>
-    <string name="app_name">J4U</string>
+<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
+    <string name="app_name" >J4U</string>
+    <string name="str_empty_tip_retry">加载失败，点击重试！</string>
 </resources>
